--- a/_config.yml
+++ b/_config.yml
@@ -1,130 +1,121 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your entire site, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve`. If you change this file, please restart the server process.
+# Jekyll Config File
 
 theme                    : "minimal-mistakes-jekyll"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Minimal Mistakes"
+title                    : "Abdullah Badawod"
 title_separator          : "-"
-subtitle                 : "Development Test Site"
-name                     : "Your Name"
-description              : "Minimal Mistakes theme test."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/test"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/apple-touch-icon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Custom Title" # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+subtitle                 : "Personal Website to showcase skills in Network Security"
+name                     : "Abdullah Badawod"
+description              : "Personal website showcasing my projects, certifications, and skills in Network Security and IT."
+url                      : "https://abdullah-badawod.github.io"  # Update this with your live URL if available
+baseurl                  : ""
+repository               : "abdullah-badawod/github.io"
+teaser                   : "/assets/images/500x300.png"
+logo                     : "/assets/images/apple-touch-icon.png"
+masthead_title           : "Abdullah's Professional Website"
 words_per_minute         : 200
-comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "utterances", "giscus", "custom"
-  disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
-  discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
-  facebook:
-    # https://developers.facebook.com/docs/plugins/comments
-    appid                :
-    num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
-  utterances:
-    theme                : # "github-light" (default), "github-dark"
-    issue_term           : # "pathname" (default)
-  giscus:
-    repo_id              : # Shown during giscus setup at https://giscus.app
-    category_name        : # Full text name of the category
-    category_id          : # Shown during giscus setup at https://giscus.app
-    discussion_term      : # "pathname" (default), "url", "title", "og:title"
-    reactions_enabled    : # '1' for enabled (default), '0' for disabled
-    theme                : # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
-  staticman:
-    branch               : # "master"
-    endpoint             : # "https://{your Staticman v3 API}/v3/entry/github/"
-atom_feed:
-  path                   : # blank (default) uses feed.xml
-search                   : true # true, false (default)
-search_full_content      : true # true, false (default)
-search_provider          : "lunr"
-lunr:
-  search_within_pages    : true
-algolia:
-  application_id         : "QB6HVGBSBA"
-  index_name             : "dev_minimal-mistakes"
-  search_only_api_key    : "9d5014e5bbc77372547bce778dfa5663"
-  powered_by             : true
 
-# SEO Related
-google_site_verification :
-bing_site_verification   :
-yandex_site_verification :
+# Comments Section Configuration (Optional)
+comments:
+  provider               : false
+  disqus:
+    shortname            : 
+  discourse:
+    server               : 
+  facebook:
+    appid                :
+    num_posts            : 5
+    colorscheme          : "light"
+  utterances:
+    theme                : "github-light"
+    issue_term           : "pathname"
+  giscus:
+    repo_id              :
+    category_name        :
+    category_id          :
+    discussion_term      : "pathname"
+    reactions_enabled    : 1
+    theme                : "light"
 
 # Social Sharing
 twitter:
-  username               : "mmistakes"
+  username               : "abdullah_badawod"
 facebook:
-  username               :
-  app_id                 :
-  publisher              :
+  username               : "abdullah.badawod"
 og_image                 : "/assets/images/bio-photo.jpg"
-# For specifying social profiles
-# - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
-    - https://twitter.com/
-    - https://github.com/
+  type                   : "Person"
+  name                   : "Abdullah Badawod"
+  links: 
+    - "https://twitter.com/abdullah_badawod"
+    - "https://github.com/abdullah-badawod"
+    - "https://www.linkedin.com/in/abdullah-badawod"
+    - "https://instagram.com/abdullah.badawod"
 
-# Analytics
+# SEO and Google Analytics (optional)
+google_site_verification : "YOUR_GOOGLE_VERIFICATION_CODE"
+bing_site_verification   : "YOUR_BING_VERIFICATION_CODE"
+yandex_site_verification : "YOUR_YANDEX_VERIFICATION_CODE"
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google"
   google:
-    tracking_id          :
+    tracking_id          : "UA-XXXXXXX-X"
 
-
-# Site Author
+# Site Author Details
 author:
-  name             : "Your Name"
+  name             : "Abdullah Badawod"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "Network Security Specialist with expertise in penetration testing, firewall configuration, and security assessments."
+  location         : "Makkah and Jeddah, Saudi Arabia"
   links:
-    - label: "Your Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://your-site.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/abdullah-badawod"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/abdullah-badawod"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/abdullah_badawod"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/abdullah.badawod"
 
+# Certifications Section
+certifications:
+  - title: "Certified Network Security Professional"
+    institution: "Security Academy"
+    date: "2023"
+  - title: "Certified Ethical Hacker"
+    institution: "EC-Council"
+    date: "2022"
 
-# Site Footer
+# Free Courses Section
+free_courses:
+  - title: "Network Security Fundamentals"
+    platform: "Coursera"
+    date: "2022"
+  - title: "Introduction to Firewall Management"
+    platform: "Udemy"
+    date: "2021"
+
+# Footer Links
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/abdullah-badawod"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/abdullah-badawod"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter"
+      url: "https://twitter.com/abdullah_badawod"
 
-
-# Reading Files
+# Site Navigation and Pages
 include:
   - .htaccess
   - _pages
@@ -152,24 +143,6 @@ exclude:
   - Rakefile
   - README
   - tmp
-keep_files:
-  - .git
-  - .svn
-encoding: "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-
-# Liquid
-strict_front_matter: true
-liquid:
-  error_mode: strict
-
-# Conversion
-markdown: kramdown
-highlighter: rouge
-lsi: false
-excerpt_separator: "\n\n"
-incremental: false
-
 
 # Markdown Processing
 kramdown:
@@ -182,21 +155,30 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
-
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+  style: compressed
 
+# Search Settings
+search: true
+search_full_content: true
+search_provider: "lunr"
+lunr:
+  search_within_pages: true
+algolia:
+  application_id: "QB6HVGBSBA"
+  index_name: "dev_minimal-mistakes"
+  search_only_api_key: "9d5014e5bbc77372547bce778dfa5663"
+  powered_by: true
 
-# Outputting
+# Output Settings
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 5
 paginate_path: /page:num/
-timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Asia/Riyadh"
 
-
-# Plugins (previously gems:)
+# Plugins
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
@@ -204,68 +186,14 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
-# mimic GitHub Pages with --safe
-whitelist:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
-
-
-# Archives
-#  Type
-#  - GitHub Pages compatible archive pages built with Liquid ~> type: liquid (default)
-#  - Jekyll Archives plugin archive pages ~> type: jekyll-archives
-#  Path (examples)
-#  - Archive page should exist at path when using Liquid method or you can
-#    expect broken links (especially with breadcrumbs enabled)
-#  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
-#  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
-#  - <base_path>/my-awesome-category/index.html ~> path: /
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
-# https://github.com/jekyll/jekyll-archives
-# jekyll-archives:
-#   enabled:
-#     - categories
-#     - tags
-#   layouts:
-#     category: archive-taxonomy
-#     tag: archive-taxonomy
-#   permalinks:
-#     category: /categories/:name/
-#     tag: /tags/:name/
-
-
-# HTML Compression
-# - http://jch.penibelst.de/
-compress_html:
-  clippings: all
-  ignore:
-    envs: development
-
-
 # Collections
 collections:
-  recipes:
-    output: true
-    permalink: /:collection/:path/
-  pets:
-    output: true
-    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
 
-
 # Defaults
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
@@ -275,34 +203,3 @@ defaults:
       read_time: true
       share: true
       related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-  # _recipes
-  - scope:
-      path: ""
-      type: recipes
-    values:
-      layout: single
-      author_profile: true
-      share: true
-  # _pets
-  - scope:
-      path: ""
-      type: pets
-    values:
-      layout: single
-      author_profile: true
-      share: true
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: false
-      share: true
